opb-plsql/src/main/java/com/butterfill/opb/plsql/translation/PlsqlParser.java
// $ANTLR 3.0.1 src/main/java/com/butterfill/opb/plsql/translation/Plsql.g 2008-10-30 16:34:38

package com.butterfill.opb.plsql.translation;


import org.antlr.runtime.*;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * Copyright (C) 2008 Peter Butterfill.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@SuppressWarnings(value="unchecked")
class PlsqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "T_PARAM", "T_PARAMS", "T_PARAM_MODE", "T_IGNORE", "PACKAGE", "ID", "AUTHID", "IS", "AS", "END", "SEMI", "CONSTANT", "DEFAULT", "NUMBER", "QUOTED_LITERAL", "NULL", "FUNCTION", "RETURN", "PROCEDURE", "PRAGMA", "TYPE", "SUBTYPE", "CURSOR", "EXCEPTION", "ML_COMMENT", "SL_COMMENT", "IN", "OUT", "NOCOPY", "QUOTED_ID", "NEWLINE", "COMMA", "EQUALS", "QUESTION_MARK", "FORWARD_SLASH", "PERCENT", "PIPE", "STAR", "EXCLAMATION", "GREATERTHAN", "LESSTHAN", "WS", "'.'", "':='", "'('", "')'"
    };
    public static final int PACKAGE=8;
    public static final int FUNCTION=20;
    public static final int STAR=41;
    public static final int PRAGMA=23;
    public static final int EQUALS=36;
    public static final int T_IGNORE=7;
    public static final int ID=9;
    public static final int SUBTYPE=25;
    public static final int EOF=-1;
    public static final int QUOTED_ID=33;
    public static final int TYPE=24;
    public static final int AS=12;
    public static final int ML_COMMENT=28;
    public static final int IN=30;
    public static final int EXCLAMATION=42;
    public static final int COMMA=35;
    public static final int IS=11;
    public static final int RETURN=21;
    public static final int QUESTION_MARK=37;
    public static final int T_PARAMS=5;
    public static final int PIPE=40;
    public static final int EXCEPTION=27;
    public static final int GREATERTHAN=43;
    public static final int LESSTHAN=44;
    public static final int PERCENT=39;
    public static final int QUOTED_LITERAL=18;
    public static final int NULL=19;
    public static final int DEFAULT=16;
    public static final int NUMBER=17;
    public static final int T_PARAM_MODE=6;
    public static final int SEMI=14;
    public static final int PROCEDURE=22;
    public static final int AUTHID=10;
    public static final int NOCOPY=32;
    public static final int WS=45;
    public static final int NEWLINE=34;
    public static final int OUT=31;
    public static final int SL_COMMENT=29;
    public static final int T_PARAM=4;
    public static final int CONSTANT=15;
    public static final int END=13;
    public static final int CURSOR=26;
    public static final int FORWARD_SLASH=38;

        public PlsqlParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "src/main/java/com/butterfill/opb/plsql/translation/Plsql.g"; }


    public static class startRule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start startRule
    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:46:1: startRule : createOrReplacePackage ( invokerRights )? isOrAS ( element )* endOfPackage ;
    public final startRule_return startRule() throws RecognitionException {
        startRule_return retval = new startRule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        createOrReplacePackage_return createOrReplacePackage1 = null;

        invokerRights_return invokerRights2 = null;

        isOrAS_return isOrAS3 = null;

        element_return element4 = null;

        endOfPackage_return endOfPackage5 = null;



        try {
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:47:3: ( createOrReplacePackage ( invokerRights )? isOrAS ( element )* endOfPackage )
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:47:6: createOrReplacePackage ( invokerRights )? isOrAS ( element )* endOfPackage
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_createOrReplacePackage_in_startRule72);
            createOrReplacePackage1=createOrReplacePackage();
            _fsp--;

            adaptor.addChild(root_0, createOrReplacePackage1.getTree());
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:48:6: ( invokerRights )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AUTHID) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:48:6: invokerRights
                    {
                    pushFollow(FOLLOW_invokerRights_in_startRule79);
                    invokerRights2=invokerRights();
                    _fsp--;

                    adaptor.addChild(root_0, invokerRights2.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_isOrAS_in_startRule87);
            isOrAS3=isOrAS();
            _fsp--;

            adaptor.addChild(root_0, isOrAS3.getTree());
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:50:6: ( element )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||LA2_0==FUNCTION||(LA2_0>=PROCEDURE && LA2_0<=CURSOR)||(LA2_0>=ML_COMMENT && LA2_0<=SL_COMMENT)||LA2_0==QUOTED_ID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:50:6: element
            	    {
            	    pushFollow(FOLLOW_element_in_startRule94);
            	    element4=element();
            	    _fsp--;

            	    adaptor.addChild(root_0, element4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            pushFollow(FOLLOW_endOfPackage_in_startRule102);
            endOfPackage5=endOfPackage();
            _fsp--;

            adaptor.addChild(root_0, endOfPackage5.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end startRule

    public static class createOrReplacePackage_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start createOrReplacePackage
    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:54:1: createOrReplacePackage : dotStar PACKAGE ( ID '.' )? packageName= ID -> ^( PACKAGE $packageName) ;
    public final createOrReplacePackage_return createOrReplacePackage() throws RecognitionException {
        createOrReplacePackage_return retval = new createOrReplacePackage_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token packageName=null;
        Token PACKAGE7=null;
        Token ID8=null;
        Token char_literal9=null;
        dotStar_return dotStar6 = null;


        Object packageName_tree=null;
        Object PACKAGE7_tree=null;
        Object ID8_tree=null;
        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_PACKAGE=new RewriteRuleTokenStream(adaptor,"token PACKAGE");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_dotStar=new RewriteRuleSubtreeStream(adaptor,"rule dotStar");
        try {
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:55:3: ( dotStar PACKAGE ( ID '.' )? packageName= ID -> ^( PACKAGE $packageName) )
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:55:6: dotStar PACKAGE ( ID '.' )? packageName= ID
            {
            pushFollow(FOLLOW_dotStar_in_createOrReplacePackage120);
            dotStar6=dotStar();
            _fsp--;

            stream_dotStar.add(dotStar6.getTree());
            PACKAGE7=(Token)input.LT(1);
            match(input,PACKAGE,FOLLOW_PACKAGE_in_createOrReplacePackage122); 
            stream_PACKAGE.add(PACKAGE7);

            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:55:22: ( ID '.' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==46) ) {
                    alt3=1;
                }
            }
            switch (alt3) {
                case 1 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:55:23: ID '.'
                    {
                    ID8=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_createOrReplacePackage125); 
                    stream_ID.add(ID8);

                    char_literal9=(Token)input.LT(1);
                    match(input,46,FOLLOW_46_in_createOrReplacePackage127); 
                    stream_46.add(char_literal9);


                    }
                    break;

            }

            packageName=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_createOrReplacePackage133); 
            stream_ID.add(packageName);


            // AST REWRITE
            // elements: PACKAGE, packageName
            // token labels: packageName
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_packageName=new RewriteRuleTokenStream(adaptor,"token packageName",packageName);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 55:47: -> ^( PACKAGE $packageName)
            {
                // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:55:50: ^( PACKAGE $packageName)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_PACKAGE.next(), root_1);

                adaptor.addChild(root_1, stream_packageName.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end createOrReplacePackage

    public static class invokerRights_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start invokerRights
    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:59:1: invokerRights : AUTHID ID ->;
    public final invokerRights_return invokerRights() throws RecognitionException {
        invokerRights_return retval = new invokerRights_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AUTHID10=null;
        Token ID11=null;

        Object AUTHID10_tree=null;
        Object ID11_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_AUTHID=new RewriteRuleTokenStream(adaptor,"token AUTHID");

        try {
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:60:3: ( AUTHID ID ->)
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:60:6: AUTHID ID
            {
            AUTHID10=(Token)input.LT(1);
            match(input,AUTHID,FOLLOW_AUTHID_in_invokerRights160); 
            stream_AUTHID.add(AUTHID10);

            ID11=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_invokerRights162); 
            stream_ID.add(ID11);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 60:16: ->
            {
                root_0 = null;
            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end invokerRights

    public static class isOrAS_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start isOrAS
    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:64:1: isOrAS : ( IS -> | AS ->);
    public final isOrAS_return isOrAS() throws RecognitionException {
        isOrAS_return retval = new isOrAS_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IS12=null;
        Token AS13=null;

        Object IS12_tree=null;
        Object AS13_tree=null;
        RewriteRuleTokenStream stream_AS=new RewriteRuleTokenStream(adaptor,"token AS");
        RewriteRuleTokenStream stream_IS=new RewriteRuleTokenStream(adaptor,"token IS");

        try {
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:65:3: ( IS -> | AS ->)
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IS) ) {
                alt4=1;
            }
            else if ( (LA4_0==AS) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("64:1: isOrAS : ( IS -> | AS ->);", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:65:6: IS
                    {
                    IS12=(Token)input.LT(1);
                    match(input,IS,FOLLOW_IS_in_isOrAS184); 
                    stream_IS.add(IS12);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 65:9: ->
                    {
                        root_0 = null;
                    }



                    }
                    break;
                case 2 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:66:6: AS
                    {
                    AS13=(Token)input.LT(1);
                    match(input,AS,FOLLOW_AS_in_isOrAS193); 
                    stream_AS.add(AS13);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 66:9: ->
                    {
                        root_0 = null;
                    }



                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end isOrAS

    public static class endOfPackage_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start endOfPackage
    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:69:1: endOfPackage : END ( ID )? SEMI ( . )* ;
    public final endOfPackage_return endOfPackage() throws RecognitionException {
        endOfPackage_return retval = new endOfPackage_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token END14=null;
        Token ID15=null;
        Token SEMI16=null;
        Token wildcard17=null;

        Object END14_tree=null;
        Object ID15_tree=null;
        Object SEMI16_tree=null;
        Object wildcard17_tree=null;

        try {
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:70:3: ( END ( ID )? SEMI ( . )* )
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:70:6: END ( ID )? SEMI ( . )*
            {
            root_0 = (Object)adaptor.nil();

            END14=(Token)input.LT(1);
            match(input,END,FOLLOW_END_in_endOfPackage211); 
            END14_tree = (Object)adaptor.create(END14);
            adaptor.addChild(root_0, END14_tree);

            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:70:10: ( ID )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:70:10: ID
                    {
                    ID15=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_endOfPackage213); 
                    ID15_tree = (Object)adaptor.create(ID15);
                    adaptor.addChild(root_0, ID15_tree);


                    }
                    break;

            }

            SEMI16=(Token)input.LT(1);
            match(input,SEMI,FOLLOW_SEMI_in_endOfPackage216); 
            SEMI16_tree = (Object)adaptor.create(SEMI16);
            adaptor.addChild(root_0, SEMI16_tree);

            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:70:19: ( . )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==EOF) ) {
                    alt6=2;
                }
                else if ( ((LA6_0>=T_PARAM && LA6_0<=49)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:70:19: .
            	    {
            	    wildcard17=(Token)input.LT(1);
            	    matchAny(input); 
            	    wildcard17_tree = (Object)adaptor.create(wildcard17);
            	    adaptor.addChild(root_0, wildcard17_tree);


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end endOfPackage

    public static class element_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start element
    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:73:1: element : ( constantDeclaration | function | procedure | mlComment | slComment | pragma | typeDefinition | subtypeDefinition | cursorDeclaration | variableDeclaration | exceptionDeclaration );
    public final element_return element() throws RecognitionException {
        element_return retval = new element_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        constantDeclaration_return constantDeclaration18 = null;

        function_return function19 = null;

        procedure_return procedure20 = null;

        mlComment_return mlComment21 = null;

        slComment_return slComment22 = null;

        pragma_return pragma23 = null;

        typeDefinition_return typeDefinition24 = null;

        subtypeDefinition_return subtypeDefinition25 = null;

        cursorDeclaration_return cursorDeclaration26 = null;

        variableDeclaration_return variableDeclaration27 = null;

        exceptionDeclaration_return exceptionDeclaration28 = null;



        try {
            // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:74:3: ( constantDeclaration | function | procedure | mlComment | slComment | pragma | typeDefinition | subtypeDefinition | cursorDeclaration | variableDeclaration | exceptionDeclaration )
            int alt7=11;
            switch ( input.LA(1) ) {
            case ID:
                {
                switch ( input.LA(2) ) {
                case CONSTANT:
                    {
                    alt7=1;
                    }
                    break;
                case ID:
                case QUOTED_ID:
                    {
                    alt7=10;
                    }
                    break;
                case EXCEPTION:
                    {
                    alt7=11;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("73:1: element : ( constantDeclaration | function | procedure | mlComment | slComment | pragma | typeDefinition | subtypeDefinition | cursorDeclaration | variableDeclaration | exceptionDeclaration );", 7, 1, input);

                    throw nvae;
                }

                }
                break;
            case FUNCTION:
                {
                alt7=2;
                }
                break;
            case PROCEDURE:
                {
                alt7=3;
                }
                break;
            case ML_COMMENT:
                {
                alt7=4;
                }
                break;
            case SL_COMMENT:
                {
                alt7=5;
                }
                break;
            case PRAGMA:
                {
                alt7=6;
                }
                break;
            case TYPE:
                {
                alt7=7;
                }
                break;
            case SUBTYPE:
                {
                alt7=8;
                }
                break;
            case CURSOR:
                {
                alt7=9;
                }
                break;
            case QUOTED_ID:
                {
                int LA7_10 = input.LA(2);

                if ( (LA7_10==ID||LA7_10==QUOTED_ID) ) {
                    alt7=10;
                }
                else if ( (LA7_10==EXCEPTION) ) {
                    alt7=11;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("73:1: element : ( constantDeclaration | function | procedure | mlComment | slComment | pragma | typeDefinition | subtypeDefinition | cursorDeclaration | variableDeclaration | exceptionDeclaration );", 7, 10, input);

                    throw nvae;
                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("73:1: element : ( constantDeclaration | function | procedure | mlComment | slComment | pragma | typeDefinition | subtypeDefinition | cursorDeclaration | variableDeclaration | exceptionDeclaration );", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:74:6: constantDeclaration
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_constantDeclaration_in_element235);
                    constantDeclaration18=constantDeclaration();
                    _fsp--;

                    adaptor.addChild(root_0, constantDeclaration18.getTree());

                    }
                    break;
                case 2 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:75:6: function
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_function_in_element242);
                    function19=function();
                    _fsp--;

                    adaptor.addChild(root_0, function19.getTree());

                    }
                    break;
                case 3 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:76:6: procedure
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_procedure_in_element249);
                    procedure20=procedure();
                    _fsp--;

                    adaptor.addChild(root_0, procedure20.getTree());

                    }
                    break;
                case 4 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:77:6: mlComment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_mlComment_in_element256);
                    mlComment21=mlComment();
                    _fsp--;

                    adaptor.addChild(root_0, mlComment21.getTree());

                    }
                    break;
                case 5 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:78:6: slComment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_slComment_in_element263);
                    slComment22=slComment();
                    _fsp--;

                    adaptor.addChild(root_0, slComment22.getTree());

                    }
                    break;
                case 6 :
                    // src/main/java/com/butterfill/opb/plsql/translation/Plsql.g:79:6: pragma
                    {
                    root_0 = (Object)adaptor.nil();
